unpackaged/main/default/objects/General_Settings__c/General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Is used to store org specific configuration.</description>
    <label>General Settings</label>
</CustomObject>