unpackaged/main/default/objects/General_Settings__c/fields/Intake_Viewer_Url__c.field-meta.xml
<CustomField>
    <fullName>Intake_Viewer_Url__c</fullName>
    <description>Is used to store base url to navigate to Intake Viewer.</description>
    <label>Intake Viewer Url</label>
    <type>Url</type>
</CustomField>