unpackaged/main/default/objects/General_Settings__c/fields/LC_Pending_Deactivation_Max_Days__c.field-meta.xml
<CustomField>
    <fullName>LC_Pending_Deactivation_Max_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>Used to store Maximum Number of Days for LC with Pending Deactivation status. When passed, LC will be moved to Deactivated status.</inlineHelpText>
    <label>LC Pending Deactivation Max Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>