unpackaged/main/default/objects/General_Settings__c/fields/Triggers_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggers Disabled</label>
    <type>Checkbox</type>
</CustomField>